<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/verification_layout_padding">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="@string/verification_code"
                android:textColor="@color/ba_blue"
                android:textSize="@dimen/vc_txt_size"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/phone_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/type_in_desc_margin_bottom"
                android:layout_marginTop="@dimen/type_in_desc_margin_top"
                android:fontFamily="@font/roboto_light"
                android:text="@string/type_in"
                android:textColor="@color/ba_txt_grey"
                android:textSize="@dimen/type_in_desc_txt_size" />

            <LinearLayout
                android:id="@+id/code_layout_grp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/incorrect_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/verification_status_top_margin"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center_horizontal"
                android:textColor="@color/ba_txt_error"
                android:textSize="@dimen/verification_status_text_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/receive_code_confirmation_top_margin"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center_horizontal"
                android:text="@string/received_question"
                android:textColor="@color/ba_txt_grey"
                android:textSize="@dimen/receive_code_confirmation" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/wait_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center_horizontal"
                android:text="@string/wait_field"
                android:textColor="@color/ba_txt_grey"
                android:textSize="@dimen/wait_field_txt_size" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>